# Pong

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  configure.sh  cspell.json
Engine/: CMakeLists.txt
Engine/include/: Engine.h  defines.h  engine.h
Engine/include/application/: application.h
Engine/include/core/: Defines.h  status_code.h  utilities.h
Engine/include/input/: key.h  mouse_button.h
Engine/include/logger/: log_level.h  logger.h
Engine/include/platform/: platform.h
Engine/src/: main.cpp
Engine/src/application/: application_manager.cpp  application_manager.h
Engine/src/logger/: logger.cpp
Engine/src/platform/: LinuxPlatform.cpp  linux_platform.cpp  linux_platform.h  platform_factory.cpp  platform_factory.h  windows_platform.cpp  windows_platform.h
Pong/: CMakeLists.txt  main.cpp
Pong/src/: pong_application.cpp
application/: CMakeLists.txt
engine/: CMakeLists.txt  Defines.h
engine/core/: StatusCode.h
engine/include/: defines.h  engine.h
engine/include/application/: application.h
engine/include/core/: status_code.h  utilities.h
engine/include/logger/: log_level.h  logger.h
engine/platform/: platform.h
engine/src/: main.cpp
engine/src/application/: application_manager.cpp  application_manager.h
engine/src/event/: event.h
engine/src/events/: event_manager.cpp  event_manager.h  registered_event.h
engine/src/events/application/: window_close.h
engine/src/events/enums/: event_category.h  event_type.h  mouse_button.h
engine/src/events/keyboard/: key_event.h
engine/src/events/mouse/: mouse_button_event.h  mouse_moved_event.h  mouse_scrolled_event.h
engine/src/platform/: linux_platform.cpp  linux_platform.h  platform_factory.cpp  platform_factory.h  xdg-shell-protocol.h
engine/src/platform/linux/: wayland_platform.cpp  wayland_platform.h
engine/src/platform/pixar/: pixar.h
engine/src/platform/pixar/types/: circle.h  line.h  rectangle.h
pong/src/: pong_application.cpp  pong_application.h
